update api design of add person and add endpoint of get person
