# gen/http/openapi.yaml
@@ -28,8 +28,40 @@ paths:
                 "200":
                     description: OK response.
                     schema:
-                        type: string
-                        format: byte
+                        $ref: '#/definitions/AddPersonResponse'
+                        required:
+                            - success
+                "409":
+                    description: Conflict response.
+                    schema:
+                        $ref: '#/definitions/PersonAlreadyExists'
+                        required:
+                            - message
+                "500":
+                    description: Internal Server Error response.
+                    schema:
+                        $ref: '#/definitions/InternalError'
+                        required:
+                            - message
+            schemes:
+                - http
+    /get/Person/{id}:
+        get:
+            tags:
+                - user
+            summary: getPerson user
+            operationId: user#getPerson
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  type: integer
+                  format: int64
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/Person'
             schemes:
                 - http
     /hello/{name}:
@@ -51,26 +83,6 @@ paths:
                         type: string
             schemes:
                 - http
-    /printPerson:
-        post:
-            tags:
-                - user
-            summary: printPerson user
-            operationId: user#printPerson
-            parameters:
-                - name: PrintPersonRequestBody
-                  in: body
-                  required: true
-                  schema:
-                    $ref: '#/definitions/Person'
-            responses:
-                "200":
-                    description: OK response.
-                    schema:
-                        type: object
-                        additionalProperties: true
-            schemes:
-                - http
     /user/{id}:
         get:
             tags:
@@ -90,31 +102,64 @@ paths:
             schemes:
                 - http
 definitions:
+    AddPersonResponse:
+        title: AddPersonResponse
+        type: object
+        properties:
+            success:
+                type: boolean
+                example: false
+        example:
+            success: true
+        required:
+            - success
+    InternalError:
+        title: InternalError
+        type: object
+        properties:
+            message:
+                type: string
+                example: Ut illum facilis.
+        example:
+            message: Rerum sit voluptates ut accusamus ea.
+        required:
+            - message
     Person:
         title: Person
         type: object
         properties:
             age:
                 type: integer
-                example: 5821947359301291492
+                example: 7818860409680168664
                 format: int64
             email:
                 type: string
-                example: mellie.legros@bahringer.net
+                example: maybell@waelchi.name
                 format: email
             id:
                 type: integer
-                example: 4127862052213228972
+                example: 4731629824481118165
                 format: int64
             mobileNo:
                 type: string
-                example: Esse qui quasi optio voluptates.
+                example: Animi perspiciatis aliquid assumenda voluptatem nemo ipsam.
             name:
                 type: string
-                example: Sit reprehenderit nostrum harum.
+                example: Ullam non magni blanditiis voluptatem distinctio sed.
         example:
-            age: 6531829287086741306
-            email: macey@macejkovic.info
-            id: 3655711690295293294
-            mobileNo: Illum facilis sit rerum sit voluptates ut.
-            name: Neque architecto dolore nisi libero.
+            age: 7320816530833862789
+            email: zaria@vonhodkiewicz.com
+            id: 1414596679315104710
+            mobileNo: Harum unde.
+            name: Quas sit.
+    PersonAlreadyExists:
+        title: PersonAlreadyExists
+        type: object
+        properties:
+            message:
+                type: string
+                example: Velit ex.
+        example:
+            message: Neque architecto dolore nisi libero.
+        required:
+            - message
