# gen/http/user/server/encode_decode.go
@@ -12,6 +12,7 @@ import (
 	"errors"
 	"io"
 	"net/http"
+	"strconv"
 
 	user "github.com/Nihal1203/go-goa-design/gen/user"
 	goahttp "goa.design/goa/v3/http"
@@ -47,43 +48,41 @@ func DecodeGetUserRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp
 	}
 }
 
-// EncodePrintPersonResponse returns an encoder for responses returned by the
-// user printPerson endpoint.
-func EncodePrintPersonResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+// EncodeGetPersonResponse returns an encoder for responses returned by the
+// user getPerson endpoint.
+func EncodeGetPersonResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
 	return func(ctx context.Context, w http.ResponseWriter, v any) error {
-		res, _ := v.(map[int32]*user.Person)
+		res, _ := v.(*user.Person)
 		enc := encoder(ctx, w)
-		body := NewPrintPersonResponseBody(res)
+		body := NewGetPersonResponseBody(res)
 		w.WriteHeader(http.StatusOK)
 		return enc.Encode(body)
 	}
 }
 
-// DecodePrintPersonRequest returns a decoder for requests sent to the user
-// printPerson endpoint.
-func DecodePrintPersonRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*user.Person, error) {
-	return func(r *http.Request) (*user.Person, error) {
-		var payload *user.Person
+// DecodeGetPersonRequest returns a decoder for requests sent to the user
+// getPerson endpoint.
+func DecodeGetPersonRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*user.GetPersonPayload, error) {
+	return func(r *http.Request) (*user.GetPersonPayload, error) {
+		var payload *user.GetPersonPayload
 		var (
-			body PrintPersonRequestBody
-			err  error
+			id  int64
+			err error
+
+			params = mux.Vars(r)
 		)
-		err = decoder(r).Decode(&body)
-		if err != nil {
-			if errors.Is(err, io.EOF) {
-				return payload, goa.MissingPayloadError()
+		{
+			idRaw := params["id"]
+			v, err2 := strconv.ParseInt(idRaw, 10, 64)
+			if err2 != nil {
+				err = goa.MergeErrors(err, goa.InvalidFieldTypeError("id", idRaw, "integer"))
 			}
-			var gerr *goa.ServiceError
-			if errors.As(err, &gerr) {
-				return payload, gerr
-			}
-			return payload, goa.DecodePayloadError(err.Error())
+			id = v
 		}
-		err = ValidatePrintPersonRequestBody(&body)
 		if err != nil {
 			return payload, err
 		}
-		payload = NewPrintPersonPerson(&body)
+		payload = NewGetPersonPayload(id)
 
 		return payload, nil
 	}
@@ -93,9 +92,9 @@ func DecodePrintPersonRequest(mux goahttp.Muxer, decoder func(*http.Request) goa
 // user addPerson endpoint.
 func EncodeAddPersonResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
 	return func(ctx context.Context, w http.ResponseWriter, v any) error {
-		res, _ := v.([]byte)
+		res, _ := v.(*user.AddPersonResponse)
 		enc := encoder(ctx, w)
-		body := res
+		body := NewAddPersonResponseBody(res)
 		w.WriteHeader(http.StatusOK)
 		return enc.Encode(body)
 	}
@@ -131,16 +130,44 @@ func DecodeAddPersonRequest(mux goahttp.Muxer, decoder func(*http.Request) goaht
 	}
 }
 
-// marshalUserPersonToPersonResponse builds a value of type *PersonResponse
-// from a value of type *user.Person.
-func marshalUserPersonToPersonResponse(v *user.Person) *PersonResponse {
-	res := &PersonResponse{
-		Name:     v.Name,
-		Age:      v.Age,
-		MobileNo: v.MobileNo,
-		Email:    v.Email,
-		ID:       v.ID,
+// EncodeAddPersonError returns an encoder for errors returned by the addPerson
+// user endpoint.
+func EncodeAddPersonError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(ctx context.Context, err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
+	encodeError := goahttp.ErrorEncoder(encoder, formatter)
+	return func(ctx context.Context, w http.ResponseWriter, v error) error {
+		var en goa.GoaErrorNamer
+		if !errors.As(v, &en) {
+			return encodeError(ctx, w, v)
+		}
+		switch en.GoaErrorName() {
+		case "internal_error":
+			var res *user.InternalError
+			errors.As(v, &res)
+			enc := encoder(ctx, w)
+			var body any
+			if formatter != nil {
+				body = formatter(ctx, res)
+			} else {
+				body = NewAddPersonInternalErrorResponseBody(res)
+			}
+			w.Header().Set("goa-error", res.GoaErrorName())
+			w.WriteHeader(http.StatusInternalServerError)
+			return enc.Encode(body)
+		case "person_already_exists":
+			var res *user.PersonAlreadyExists
+			errors.As(v, &res)
+			enc := encoder(ctx, w)
+			var body any
+			if formatter != nil {
+				body = formatter(ctx, res)
+			} else {
+				body = NewAddPersonPersonAlreadyExistsResponseBody(res)
+			}
+			w.Header().Set("goa-error", res.GoaErrorName())
+			w.WriteHeader(http.StatusConflict)
+			return enc.Encode(body)
+		default:
+			return encodeError(ctx, w, v)
+		}
 	}
-
-	return res
 }
